--- a/para.html
+++ b/para.html
@@ -3,16 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Paragraph</title>
 </head>
-
 <body>
-    <h1>Hello World</h1>
-    <h2>Hello World</h2>
-    <h3>Hello World</h3>
-    <h4>Hello World</h4>
-    <h5>Hello World</h5>
-    <h6>Hello World</h6>
     <p>Welcome to Html Tutorial</p>
     <p>
         Headings-- h1 to h2 <br>
@@ -31,7 +24,5 @@
 
         </pre>
     </p>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQJisSItbtcblOGxUkNU3S0SfpawxcGVBb1bQ&usqp=CAU" alt="CAR"> <br>
-    <a href="https://www.flipkart.com/">Flipkart</a>
 </body>
 </html>
